# SciBudy

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.yml  package.json  pyproject.toml  release-manifest.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  install_issue.md  model_runtime_issue.md
docs/: index.md
examples/: codex-prompts.md  install-profiles.md  library-workflow.sh
research_mcp/: __init__.py  __main__.py  analysis_config.py  analysis_engine.py  cache.py  catalog.py  cli.py  client.py  codex_config.py  domain_profiles.py  errors.py  formatters.py  install_state.py  journal_profiles.py  journal_style.py  library.py  local_embedding_client.py  local_embedding_worker.py  local_reranker_client.py  local_reranker_worker.py  models.py  paths.py  ranking.py  rate_limit.py  release-manifest.json  release_manifest.py  runstore.py  runtime_install.py  server.py  service.py  settings.py  skill_install.py  ui_bundle.py  utils.py  warm_local_models.py
scripts/: check_agent_workflow.py  release_check.py  smoke_install.py
tests/: test_analysis_engine.py  test_client.py  test_codex_config.py  test_distribution.py  test_health_check.py  test_journal_style.py  test_library.py  test_paths.py  test_ranking.py  test_service.py  test_utils.py
web/: index.html  package-lock.json  package.json
(+56 files in other folders)
